--- a/ЛР 7/style.css
+++ b/ЛР 7/style.css
@@ -38,3 +38,12 @@
 .item9 { border-color: rgb(255, 0, 0); }
 
 .item10 { flex: 1 1 100%; height: 150px; border-color: rgb(0, 0, 0); }
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .block {
+        width: 100%;
+    }
+}
